# video-compression-project

./: README.md  colorizeYUV.py  grayScaleYUV.py  project.c  project.py  script.py
Cpp/: CMakeLists.txt  colorizeMP4.py  hello.py
Cpp/include/: header.h
Cpp/src/: colorizeMP4.py  convertYUVtoGrayscale  grayScaleYUV.cpp  main.cpp  main.py
